--- a/SCME.UI/PagesUser/UserWorkModePage.xaml
+++ b/SCME.UI/PagesUser/UserWorkModePage.xaml
@@ -108,6 +108,6 @@
             </Grid>
         </Button>
 
-        <Button x:Name="BackButton" Grid.Column="0" Grid.Row="7" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Back}" Click="BackButton_Click"/>
+        <Button x:Name="BackButton" Grid.Column="0" Grid.Row="7" Style="{StaticResource PrimaryButton}" Content="{x:Static res:Resources.Back}" HorizontalAlignment="Left" Click="BackButton_Click"/>
     </Grid>
 </Page>
