--- a/SCME.WpfControlLibrary/Styles/Button.xaml
+++ b/SCME.WpfControlLibrary/Styles/Button.xaml
@@ -90,6 +90,7 @@
     <Style x:Key="PrimaryButton" TargetType="Button" BasedOn="{StaticResource BaseFlatButton}">
         <Setter Property="Foreground" Value="White"></Setter>
         <Setter Property="Background" Value="{StaticResource BlueBrush}" />
+        <Setter Property="Width" Value="290"/>
     </Style>
 
     <Style x:Key="BackButton" TargetType="Button" BasedOn="{StaticResource PrimaryButton}">
