--- a/SCME.WpfControlLibrary/CustomControls/ImpulseResultPageControl.xaml
+++ b/SCME.WpfControlLibrary/CustomControls/ImpulseResultPageControl.xaml
@@ -1,4 +1,4 @@
-﻿<Grid x:Class="SCME.WpfControlLibrary.CustomControls.ImpulseResultPageControl"
+﻿<Grid x:Class="SCME.WpfControlLibrary.CustomControls.SSRTUResultPageControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,14 +6,14 @@
              xmlns:local="clr-namespace:SCME.WpfControlLibrary.CustomControls"
              xmlns:vm="clr-namespace:SCME.WpfControlLibrary.ViewModels"
             xmlns:converters="clr-namespace:SCME.WpfControlLibrary.IValueConverters"
-             mc:Ignorable="d" d:DataContext="{d:DesignData vm:ImpulseResultComponentVM}"
+             mc:Ignorable="d" d:DataContext="{d:DesignData vm:SSRTUResultComponentVM}"
              >
         <Grid.Resources>
             <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulsePageStyle.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/SSRTUPageStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
-            <converters:ImpulseResultConverter x:Key="DN2S"/>
+            <converters:SSRTUResultConverter x:Key="DN2S"/>
             <converters:BoolToBrush x:Key="B2B" NullBrush="Transparent" TrueBrush="{StaticResource xGreen1}" FalseBrush="{StaticResource xRed1}"/>
             <Style TargetType="Border">
                     <Setter Property="Margin" Value="10,0,0,0"/>
