--- a/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/SSRTUPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="SCME.WpfControlLibrary.Pages.ImpulsePage"
+﻿<Page x:Class="SCME.WpfControlLibrary.Pages.SSRTUPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,7 +12,7 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulsePageStyle.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/SSRTUPageStyle.xaml" />
 
             </ResourceDictionary.MergedDictionaries>
          
