--- a/SCME.WpfControlLibrary/Pages/SSRTUResultPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/SSRTUResultPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="SCME.WpfControlLibrary.Pages.ImpulseResultPage"
+﻿<Page x:Class="SCME.WpfControlLibrary.Pages.SSRTUResultPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,12 +7,12 @@
       xmlns:controls="clr-namespace:SCME.WpfControlLibrary.CustomControls"
       mc:Ignorable="d" DataContext="{Binding RelativeSource={RelativeSource Self}, Path=VM}"
       
-      Title="ImpulseResultPage">
+      Title="SSRTUResultPage">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
-                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ImpulsePageStyle.xaml" />
+                <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/SSRTUPageStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <Style TargetType="TextBlock" BasedOn="{StaticResource {x:Type TextBlock}}"/>
         </ResourceDictionary>
@@ -35,9 +35,9 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <controls:ImpulseResultPageControl Grid.Column="0" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:ImpulseResultPage}}, Path=VMPosition1}" Margin="0,0,10,0"/>
-            <controls:ImpulseResultPageControl Grid.Column="1" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:ImpulseResultPage}}, Path=VMPosition2}" Margin="10,0,10,0"/>
-            <controls:ImpulseResultPageControl Grid.Column="2" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:ImpulseResultPage}}, Path=VMPosition3}" Margin="10,0,0,0"/>
+            <controls:SSRTUResultPageControl Grid.Column="0" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SSRTUResultPage}}, Path=VMPosition1}" Margin="0,0,10,0"/>
+            <controls:SSRTUResultPageControl Grid.Column="1" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SSRTUResultPage}}, Path=VMPosition2}" Margin="10,0,10,0"/>
+            <controls:SSRTUResultPageControl Grid.Column="2" DataContext="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:SSRTUResultPage}}, Path=VMPosition3}" Margin="10,0,0,0"/>
         </Grid>
         <Grid Grid.Row="3" Grid.ColumnSpan="3">
             <Grid.ColumnDefinitions>
