--- a/SCME.UI/PagesTech/GatePage.xaml
+++ b/SCME.UI/PagesTech/GatePage.xaml
@@ -22,7 +22,7 @@
             <Setter Property="Height" Value="62" />
         </Style>
 
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CButtonStyle}">
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}">
             <Setter Property="Margin" Value="10,0" />
         </Style>
 
@@ -170,7 +170,7 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="auto" />
@@ -344,20 +344,20 @@
               X1="0" Y1="0" X2="0" Y2="{Binding ElementName=borderParameters, Path=ActualHeight}"
               Grid.Column="3" Grid.Row="0" Margin="0,20" />
 
-        <Button x:Name="btnBack" x:FieldModifier="private"
-                Grid.Column="0" Grid.Row="1"
+        <Button x:Name="btnBack" x:FieldModifier="private" Style="{StaticResource BackButton}"
+                Grid.Column="0" Grid.Row="1" VerticalAlignment="Bottom"
                 Content="{x:Static res:Resources.Back}" Click="Back_Click" Margin="6" />
         <Button x:Name="btnTemp" x:FieldModifier="private"
-                Grid.Column="1" Grid.Row="1"
+                Grid.Column="1" Grid.Row="1" VerticalAlignment="Bottom"
                 Content="{x:Static res:Resources.SetTemp}"
                 Click="BtnTemp_OnClick"
                 Margin="6" />
         <Button Grid.Column="2" Grid.Row="1"
-                Content="{x:Static res:Resources.Stop}" Click="Stop_Click"
+                Content="{x:Static res:Resources.Stop}" Click="Stop_Click" VerticalAlignment="Bottom"
                 Margin="6" Background="{StaticResource xRed1}" />
 
         <Button x:Name="btnStart" x:FieldModifier="private"
-                Grid.Column="3" Grid.Row="1"
+                Grid.Column="3" Grid.Row="1" VerticalAlignment="Bottom"
                 Content="{x:Static res:Resources.Start}" Click="Start_Click"
                 Margin="6" Background="{StaticResource xGreen1}" />
     </Grid>
