--- a/SCME.UI/PagesTech/PasswordPage.xaml
+++ b/SCME.UI/PagesTech/PasswordPage.xaml
@@ -11,7 +11,7 @@
     
     <Page.Resources>
         <Style TargetType="{x:Type Label}" BasedOn="{StaticResource CLabelStyle}" />
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CButtonStyle}" />
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}" />
     </Page.Resources>
 
     <Grid>
