--- a/SCME.UI/PagesCommon/ResultsPage.xaml
+++ b/SCME.UI/PagesCommon/ResultsPage.xaml
@@ -19,7 +19,7 @@
             <Setter Property="VerticalAlignment" Value="Center" />
         </Style>
 
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CButtonStyle}"/>
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}"/>
 
         <Style x:Key="PlaceholderTextBox" TargetType="{x:Type customControls:ValidatingTextBox}">
             <Setter Property="Template">
