--- a/SCME.UI/PagesTech/ClampPage.xaml
+++ b/SCME.UI/PagesTech/ClampPage.xaml
@@ -19,7 +19,7 @@
             <Setter Property="Height" Value="62" />
         </Style>
 
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CButtonStyle}">
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}">
             <Setter Property="Margin" Value="10,0" />
         </Style>
 
@@ -38,7 +38,7 @@
     
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="0.7*" />
             <ColumnDefinition Width="1.3*" />
@@ -149,10 +149,9 @@
               Grid.Column="3" Grid.Row="0" Margin="0,20,0,20" />
 
         <Button x:Name="btnBack" x:FieldModifier="private"
-                Grid.Column="0" Grid.Row="1"
+                Grid.Column="0" Grid.Row="1" Style="{StaticResource BackButton}" Margin="6"
                 Content="{x:Static res:Resources.Back}"
-                Click="Back_Click"
-                Margin="0,0,0,0" />
+                Click="Back_Click"/>
         <Button Grid.Column="2" Grid.Row="1"
                 Content="{x:Static res:Resources.Stop}"
                 Click="Stop_Click"
