--- a/SCME.UI/PagesTech/DVdtPage.xaml
+++ b/SCME.UI/PagesTech/DVdtPage.xaml
@@ -36,7 +36,7 @@
             <Setter Property="HorizontalContentAlignment" Value="Right"></Setter>
         </Style>
 
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CButtonStyle}">
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}">
             <Setter Property="Margin" Value="10,0" />
         </Style>
 
@@ -56,7 +56,7 @@
     
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="Auto" />
@@ -184,7 +184,7 @@
               Grid.Column="3" Grid.Row="0" Margin="0,20,0,20" />
 
         <Button x:Name="btnBack" x:FieldModifier="private"
-                Grid.Column="0" Grid.Row="1" 
+                Grid.Column="0" Grid.Row="1" Style="{StaticResource BackButton}"
                 Content="{x:Static res:Resources.Back}"
                 Click="Back_Click"
                Margin="6" />
