--- a/SCME.UI/PagesTech/SLPage.xaml
+++ b/SCME.UI/PagesTech/SLPage.xaml
@@ -23,7 +23,7 @@
             <Setter Property="Height" Value="62" />
         </Style>
 
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CButtonStyle}">
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}">
             <Setter Property="Margin" Value="10,0" />
         </Style>
 
@@ -182,7 +182,7 @@
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="450" />
@@ -420,7 +420,7 @@
               X1="0" Y1="0" X2="0" Y2="{Binding ElementName=rGrid, Path=ActualHeight}"
               Grid.Column="3" Grid.Row="0" Margin="0,20,0,20" />
 
-        <Button x:Name="btnBack" x:FieldModifier="private"
+        <Button x:Name="btnBack" x:FieldModifier="private" Style="{StaticResource BackButton}"
                 Grid.Column="0" Grid.Row="1"
                 Content="{x:Static res:Resources.Back}"
                 Click="Back_Click"
