--- a/SCME.UI/PagesTech/TechnicianPage.xaml
+++ b/SCME.UI/PagesTech/TechnicianPage.xaml
@@ -182,8 +182,8 @@
        
         <Button Grid.Column="0" Grid.Row="1"
                 Content="{x:Static res:Resources.Back}"
-                Click="BtnBack_Click"
-                Margin="0,0,0,0"
-                Style="{StaticResource CButtonStyle}" />
+                Click="BtnBack_Click" VerticalAlignment="Bottom" HorizontalAlignment="Left"
+              Margin="6"
+                Style="{StaticResource BackButton}" />
     </Grid>
 </Page>
