--- a/SCME.UI/PagesUser/UserTestPage.xaml
+++ b/SCME.UI/PagesUser/UserTestPage.xaml
@@ -41,12 +41,12 @@
             <Setter Property="FontSize" Value="16" />
         </Style>
 
-        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CButtonStyle}" />
+        <Style TargetType="{x:Type Button}" BasedOn="{StaticResource PrimaryButton}" />
     </Page.Resources>
 
     <Grid x:Name="MainGrid" Margin="0,0,0,1">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="80*" />
+            <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="80*" />
             <ColumnDefinition Width="80*" />
             <ColumnDefinition Width="80*" />
@@ -60,7 +60,7 @@
             <RowDefinition Height="47*" />
             <RowDefinition Height="320*" />
             <RowDefinition Height="320*" />
-            <RowDefinition Height="95*" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
         <Label x:Name="lbPsdJob" Grid.Row="0" Grid.Column="0" HorizontalAlignment="Center" Content="{x:Static res:Resources.PsdJob}" FontSize="28" Height="40" Margin="85,1,75,0" VerticalAlignment="Top" />
@@ -184,11 +184,11 @@
               X1="0" Y1="0" X2="0" Y2="{Binding ElementName=gridResult2, Path=ActualHeight}"
               Grid.Column="3" Grid.Row="0" Grid.RowSpan="6" Margin="0,20" Width="0" />
 
-        <Button Name="btnBack" x:FieldModifier="private" Grid.Column="0" Grid.Row="8" Content="{x:Static res:Resources.Back}" Click="Back_Click" Margin="0" TabIndex="7"/>
-        <Grid Grid.Column="1" Grid.Row="8" Margin="10,0,10,0" Visibility="{Binding Source={x:Static ui:Cache.Main}, Path=VM.IsLocal, Converter={StaticResource B2VI}}">
+        <Button Name="btnBack" x:FieldModifier="private" Grid.Column="0" Grid.Row="8" Content="{x:Static res:Resources.Back}" Click="Back_Click" Margin="0" TabIndex="7" Style="{StaticResource BackButton}" HorizontalAlignment="Left"/>
+        <Grid Grid.Column="1" Grid.Row="8"  Visibility="{Binding Source={x:Static ui:Cache.Main}, Path=VM.IsLocal, Converter={StaticResource B2VI}}" Margin="6,0">
             <Button Name="btnSync" x:FieldModifier="private"  Content="{x:Static res:Resources.Sync}" Visibility="{Binding SpecialMeasureMode, Converter={StaticResource B2VI}}"  Click="BtnSync_OnClick" TabIndex="7"/>
         </Grid>
-        <Button Grid.Column="2" Grid.Row="8" Content="{x:Static res:Resources.Stop}" Background="{StaticResource xRed1}" Click="Stop_Click" Margin="0,0,10,0" TabIndex="8" />
-        <Button Name="btnStart" x:FieldModifier="private" Grid.Column="3" Grid.Row="8" Content="{x:Static res:Resources.Start}" Background="{StaticResource xGreen1}" Click="Start_Click" Margin="10,0,0,0" TabIndex="5"/>
+        <Button Grid.Column="2" Grid.Row="8" Content="{x:Static res:Resources.Stop}" Background="{StaticResource xRed1}" Click="Stop_Click" Margin="6,0"  TabIndex="8" />
+        <Button Name="btnStart" x:FieldModifier="private" Grid.Column="3" Grid.Row="8" Content="{x:Static res:Resources.Start}" Background="{StaticResource xGreen1}" Margin="0" Click="Start_Click"  TabIndex="5"/>
     </Grid>
 </Page>
